--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>handlebars-helpers</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+        </dependency>
+
         <!-- Tests Dependencies -->
 
         <dependency>
