--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <logback-classic.version>1.4.1</logback-classic.version>
         <jackson-core.version>2.13.4</jackson-core.version>
         <handlebars-helpers.version>4.3.0</handlebars-helpers.version>
+        <commons-cli.version>1.5.0</commons-cli.version>
 
         <!-- Test Dependencies -->
         <junit-jupiter-engine.version>5.9.0</junit-jupiter-engine.version>
@@ -102,6 +103,12 @@
                 <groupId>com.github.jknack</groupId>
                 <artifactId>handlebars-helpers</artifactId>
                 <version>${handlebars-helpers.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${commons-cli.version}</version>
             </dependency>
 
             <!-- Tests Dependencies -->
