--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -6,7 +6,8 @@
     <parent>
         <groupId>com.weedow</groupId>
         <artifactId>schema-org-parent</artifactId>
-        <version>${revision}</version>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>schema-org-generator</artifactId>
