configure project with sonar, add github workflows (build, release, deployment), add modules distribution, report and dummy (required by nexus-staging-maven-plugin for deployment)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,19 @@ jobs:
           distribution: 'zulu'
           java-version: 11
 
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
       - name: Maven Version
         run: mvn --version
 
@@ -35,5 +48,5 @@ jobs:
       - name: Analyze with Sonar
         run: mvn --batch-mode sonar:sonar -Dsonar.login=$SONAR_TOKEN
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
