--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -29,6 +29,8 @@
         <mrm-maven-plugin.version>1.4.1</mrm-maven-plugin.version>
         <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
         <maven-it-extension.version>0.11.0</maven-it-extension.version>
+
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/../report/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencies>
@@ -36,6 +38,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>${maven-plugin-api.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
@@ -47,6 +50,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
             <version>${maven-project.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
