--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,8 @@
         <sonar.organization>kobee1203</sonar.organization>
         <sonar.projectKey>Kobee1203_schema-org-java</sonar.projectKey>
         <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
-        <sonar.exclusions>
-            **/generated-sources/**
-        </sonar.exclusions>
-        <sonar.coverage.exclusions>
-            **/generated-sources/**
-        </sonar.coverage.exclusions>
+        <sonar.exclusions>**/generated-sources/**</sonar.exclusions>
+        <sonar.coverage.exclusions>**/generated-sources/**</sonar.coverage.exclusions>
 
         <!-- Dependencies -->
         <lombok.version>1.18.24</lombok.version>
