Update configuration to deploy release successfully

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,7 +38,7 @@ jobs:
         run: mvn --version
 
       - name: Build and Deploy to the Maven Central Repository
-        run: mvn -B -U -Dgpg.passphrase="${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}" clean deploy -DskipTests -P ossrh
+        run: mvn -B -U clean deploy -DskipTests -P ossrh
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
