--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.weedow</groupId>
@@ -30,6 +31,14 @@
         </license>
     </licenses>
 
+    <developers>
+        <developer>
+            <id>Kobee1203</id>
+            <name>Nicolas Dos Santos</name>
+            <email>Kobee1203@users.noreply.github.com</email>
+        </developer>
+    </developers>
+
     <properties>
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -58,10 +67,14 @@
         <junit-jupiter-engine.version>5.9.1</junit-jupiter-engine.version>
         <assertj-core.version>3.23.1</assertj-core.version>
         <mockito-junit-jupiter.version>4.8.1</mockito-junit-jupiter.version>
+        <equalsverifier.version>3.11</equalsverifier.version>
+        <to-string-verifier.version>1.4.8</to-string-verifier.version>
+        <system-stubs-jupiter.version>2.0.1</system-stubs-jupiter.version>
 
         <!-- Plugins -->
         <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
         <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
+        <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
@@ -72,9 +85,7 @@
         <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
-        <equalsverifier.version>3.11</equalsverifier.version>
-        <to-string-verifier.version>1.4.8</to-string-verifier.version>
-        <system-stubs-jupiter.version>2.0.1</system-stubs-jupiter.version>
+        <sign-maven-plugin.version>1.0.1</sign-maven-plugin.version>
     </properties>
 
     <modules>
@@ -183,6 +194,19 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>${maven-assembly-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>${maven-javadoc-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -318,7 +342,7 @@
                     <plugin>
                         <groupId>org.simplify4u.plugins</groupId>
                         <artifactId>sign-maven-plugin</artifactId>
-                        <version>1.0.1</version>
+                        <version>${sign-maven-plugin.version}</version>
                         <executions>
                             <execution>
                                 <goals>
