--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <module>distribution</module>
         <!-- nexus-staging-maven-plugin requires the last module to be not skipped for deployment -->
         <module>dummy-module</module>
+        <module>commons</module>
     </modules>
 
     <dependencies>
