--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     <modules>
         <module>generator</module>
         <module>maven-plugin</module>
+        <module>serializer</module>
         <module>report</module>
         <module>distribution</module>
         <!-- nexus-staging-maven-plugin requires the last module to be not skipped for deployment -->
