--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -21,4 +21,17 @@
         </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.java</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 </project>
