--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>system-stubs-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.hakky54</groupId>
+            <artifactId>logcaptor</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
