--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,10 @@
         <mockito-junit-jupiter.version>4.8.1</mockito-junit-jupiter.version>
         <equalsverifier.version>3.11</equalsverifier.version>
         <to-string-verifier.version>1.4.8</to-string-verifier.version>
+        <json-unit-assertj.version>2.36.0</json-unit-assertj.version>
         <system-stubs-jupiter.version>2.0.1</system-stubs-jupiter.version>
         <logcaptor.version>2.7.10</logcaptor.version>
+        <inject-resources-junit-jupiter.version>0.3.2</inject-resources-junit-jupiter.version>
 
         <!-- Plugins -->
         <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
@@ -175,6 +177,13 @@
                 <version>${to-string-verifier.version}</version>
                 <scope>test</scope>
             </dependency>
+            <!-- https://github.com/lukas-krecan/JsonUnit -->
+            <dependency>
+                <groupId>net.javacrumbs.json-unit</groupId>
+                <artifactId>json-unit-assertj</artifactId>
+                <version>${json-unit-assertj.version}</version>
+                <scope>test</scope>
+            </dependency>
             <!-- https://github.com/webcompere/system-stubs -->
             <dependency>
                 <groupId>uk.org.webcompere</groupId>
@@ -187,6 +196,13 @@
                 <groupId>io.github.hakky54</groupId>
                 <artifactId>logcaptor</artifactId>
                 <version>${logcaptor.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <!-- https://github.com/hosuaby/inject-resources -->
+            <dependency>
+                <groupId>io.hosuaby</groupId>
+                <artifactId>inject-resources-junit-jupiter</artifactId>
+                <version>${inject-resources-junit-jupiter.version}</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
